CustomObjects/objects/invoiceit_s__Payment_Allocation__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>Holds the Payment Allocation details which essentially splits the Payment among invoices.</description>
    <fields>
        <fullName>invoiceit_s__Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <description>The Invoice against which this Payment is made.</description>
        <inlineHelpText>The Invoice against which this Payment is made.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Plan_Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan Installment</label>
        <referenceTo>invoiceit_s__Payment_Plan_Installment__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>invoiceit_s__Payment__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#FF0000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Payment Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>